<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView88"
        android:layout_width="wrap_content"
        android:layout_height="23dp"
        android:layout_marginTop="8dp"
        android:text="Longitude: "
        app:layout_constraintStart_toEndOf="@+id/editTextLat"
        app:layout_constraintTop_toBottomOf="@+id/textView86" />

    <EditText
        android:id="@+id/editTextLon"
        android:layout_width="0dp"
        android:layout_height="32dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:focusableInTouchMode="false"
        android:inputType="numberDecimal"
        android:paddingStart="5dp"
        android:paddingTop="0.0px"
        android:paddingEnd="10dp"
        android:paddingBottom="0dp"
        android:selectAllOnFocus="false"
        android:singleLine="true"
        android:text="0.00"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView88"
        app:layout_constraintTop_toBottomOf="@+id/textView86" />

    <TextView
        android:id="@+id/textView87"
        android:layout_width="wrap_content"
        android:layout_height="23dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="Latitude: "
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView86" />

    <EditText
        android:id="@+id/editTextLat"
        android:layout_width="0dp"
        android:layout_height="32dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:focusableInTouchMode="false"
        android:inputType="numberDecimal"
        android:paddingStart="5dp"
        android:paddingTop="0.0px"
        android:paddingEnd="10dp"
        android:paddingBottom="0dp"
        android:selectAllOnFocus="false"
        android:singleLine="true"
        android:text="0.00"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        app:layout_constraintStart_toEndOf="@+id/textView87"
        app:layout_constraintTop_toBottomOf="@+id/textView86" />

    <TextView
        android:id="@+id/textView86"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/location"
        android:textAlignment="center"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextGyrX" />

    <TextView
        android:id="@+id/textView85"
        android:layout_width="wrap_content"
        android:layout_height="23dp"
        android:layout_marginTop="8dp"
        android:text="Z:"
        app:layout_constraintEnd_toStartOf="@+id/editTextGyrZ"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/editTextGyrY"
        app:layout_constraintTop_toBottomOf="@+id/textView81" />

    <EditText
        android:id="@+id/editTextGyrZ"
        android:layout_width="0dp"
        android:layout_height="32dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:focusableInTouchMode="false"
        android:inputType="numberDecimal"
        android:paddingStart="5dp"
        android:paddingTop="0.0px"
        android:paddingEnd="10dp"
        android:paddingBottom="0dp"
        android:selectAllOnFocus="false"
        android:singleLine="true"
        android:text="0.00"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/textView85"
        app:layout_constraintTop_toBottomOf="@+id/textView81" />

    <TextView
        android:id="@+id/textView84"
        android:layout_width="wrap_content"
        android:layout_height="23dp"
        android:layout_marginTop="8dp"
        android:text="Y:"
        app:layout_constraintEnd_toStartOf="@+id/editTextGyrY"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/editTextGyrX"
        app:layout_constraintTop_toBottomOf="@+id/textView81" />

    <EditText
        android:id="@+id/editTextGyrY"
        android:layout_width="0dp"
        android:layout_height="32dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:focusableInTouchMode="false"
        android:inputType="numberDecimal"
        android:paddingStart="5dp"
        android:paddingTop="0.0px"
        android:paddingEnd="10dp"
        android:paddingBottom="0dp"
        android:selectAllOnFocus="false"
        android:singleLine="true"
        android:text="0.00"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        app:layout_constraintEnd_toStartOf="@+id/textView85"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/textView84"
        app:layout_constraintTop_toBottomOf="@+id/textView81" />

    <TextView
        android:id="@+id/textView83"
        android:layout_width="wrap_content"
        android:layout_height="23dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="X:"
        app:layout_constraintEnd_toStartOf="@+id/editTextGyrX"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView81" />

    <EditText
        android:id="@+id/editTextGyrX"
        android:layout_width="0dp"
        android:layout_height="32dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:focusableInTouchMode="false"
        android:inputType="numberDecimal"
        android:paddingStart="5dp"
        android:paddingTop="0.0px"
        android:paddingEnd="10dp"
        android:paddingBottom="0dp"
        android:selectAllOnFocus="false"
        android:singleLine="true"
        android:text="0.00"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        app:layout_constraintEnd_toStartOf="@+id/textView84"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/textView83"
        app:layout_constraintTop_toBottomOf="@+id/textView81" />

    <TextView
        android:id="@+id/textView81"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="Gyroscope"
        android:textAlignment="center"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextAccX" />

    <EditText
        android:id="@+id/editTextAccZ"
        android:layout_width="0dp"
        android:layout_height="32dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:focusableInTouchMode="false"
        android:inputType="numberDecimal"
        android:paddingStart="5dp"
        android:paddingTop="0.0px"
        android:paddingEnd="10dp"
        android:paddingBottom="0dp"
        android:selectAllOnFocus="false"
        android:singleLine="true"
        android:text="0.00"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/textView76"
        app:layout_constraintTop_toBottomOf="@+id/textView70" />

    <TextView
        android:id="@+id/textView76"
        android:layout_width="wrap_content"
        android:layout_height="23dp"
        android:layout_marginTop="8dp"
        android:text="Z:"
        app:layout_constraintEnd_toStartOf="@+id/editTextAccZ"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/editTextAccY"
        app:layout_constraintTop_toBottomOf="@+id/textView70" />

    <EditText
        android:id="@+id/editTextAccY"
        android:layout_width="0dp"
        android:layout_height="32dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:focusableInTouchMode="false"
        android:inputType="numberDecimal"
        android:paddingStart="5dp"
        android:paddingTop="0.0px"
        android:paddingEnd="10dp"
        android:paddingBottom="0dp"
        android:selectAllOnFocus="false"
        android:singleLine="true"
        android:text="0.00"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        app:layout_constraintEnd_toStartOf="@+id/textView76"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/textView75"
        app:layout_constraintTop_toBottomOf="@+id/textView70" />

    <TextView
        android:id="@+id/textView75"
        android:layout_width="wrap_content"
        android:layout_height="23dp"
        android:layout_marginTop="8dp"
        android:text="Y:"
        app:layout_constraintEnd_toStartOf="@+id/editTextAccY"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/editTextAccX"
        app:layout_constraintTop_toBottomOf="@+id/textView70" />

    <EditText
        android:id="@+id/editTextAccX"
        android:layout_width="0dp"
        android:layout_height="32dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:focusableInTouchMode="false"
        android:inputType="numberDecimal"
        android:paddingStart="5dp"
        android:paddingTop="0.0px"
        android:paddingEnd="10dp"
        android:paddingBottom="0dp"
        android:selectAllOnFocus="false"
        android:singleLine="true"
        android:text="0.00"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        app:layout_constraintEnd_toStartOf="@+id/textView75"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/textView74"
        app:layout_constraintTop_toBottomOf="@+id/textView70" />

    <TextView
        android:id="@+id/textView74"
        android:layout_width="wrap_content"
        android:layout_height="23dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="X:"
        app:layout_constraintEnd_toStartOf="@+id/editTextAccX"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView70" />

    <TextView
        android:id="@+id/textViewTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="00:00:00"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewRecording" />

    <TextView
        android:id="@+id/textView70"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="Accelerometer"
        android:textAlignment="center"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewTime" />

    <TextView
        android:id="@+id/textView25"
        android:layout_width="wrap_content"
        android:layout_height="21dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/comment_txtbox_label"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/chipGroup" />

    <TextView
        android:id="@+id/textView22"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:text="@string/press_start_txt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextFileName" />

    <EditText
        android:id="@+id/editTextFileName"
        android:layout_width="0dp"
        android:layout_height="32dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="16dp"
        android:autofillHints=""
        android:ems="10"
        android:enabled="true"
        android:inputType="textPersonName"
        android:maxLength="15"
        android:paddingLeft="5dp"
        android:paddingTop="5dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView25"
        app:layout_constraintTop_toBottomOf="@+id/chipGroup" />

    <Button
        android:id="@+id/buttonStart"
        android:layout_width="250dp"
        android:layout_height="80dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="16dp"
        android:text="@string/button_start"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView22" />

    <com.google.android.material.chip.ChipGroup
        android:id="@+id/chipGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:singleSelection="true">

        <com.google.android.material.chip.Chip
            android:id="@+id/chipBicycle"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bicycle"
            app:chipIcon="@drawable/ic_directions_bike_black_24dp"
            app:chipIconVisible="true" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chipMotorcycle"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/motorcycle"
            app:chipIcon="@drawable/ic_motorcycle_black_24dp"
            app:chipIconVisible="true" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chipCar"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/car"
            app:chipIcon="@drawable/ic_drive_eta_black_24dp"
            app:chipIconVisible="true" />
    </com.google.android.material.chip.ChipGroup>

    <TextView
        android:id="@+id/textViewRecording"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="16dp"
        android:textColor="@android:color/holo_red_light"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView22" />

    <Button
        android:id="@+id/buttonUploadActivity"
        android:layout_width="wrap_content"
        android:layout_height="55dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="16dp"
        android:drawableLeft="@android:drawable/stat_sys_upload"
        android:text="Upload"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>